opam-version: "2.0"
maintainer: "Ghiles Ziat <ghiles.ziat@lip6.fr>"
authors: [
  "Ghiles Ziat <ghiles.ziat@lip6.fr>"
]
homepage: "https://github.com/ghilesZ/parsley"
bug-reports: "https://github.com/ghilesZ/parsley/issues"
dev-repo: "git+https://github.com/ghilesZ/parsley"
license: "MIT"
build: [
  ["dune" "subst"] {pinned}
  ["dune" "build" "-p" name "-j" jobs]
]

depends: [
  "dune" {build}
  "zarith"
]

synopsis: "Parsley library"
description: "Parsley is a library that provides string to numeric values utilities (int_of_string, float_of_string ...) while indicating if a loss of precision occured during the conversion "
